classDiagram
    class AppState {
        +AppState()
        +animating()
    }
    class Sfx {
        +build()
    }
    class Action {
    }
    class BattleArt {
        +load()
        +portrait()
        +unit()
        +tile()
        +dojo()
        +makeUnits()
    }
    class BattleEvent {
    }
    class BattleModel {
        +state()
        +lesson()
        +blocked()
        +occupant()
        +maxHealth()
        +moveRange()
    }
    class BattleScene {
        +onEnter()
        +onExit()
        +update()
        +render()
        +onTouch()
        +onBack()
    }
    class Button {
    }
    class Hit {
    }
    class BattleState {
    }
    class Canvas {
        +Canvas()
        +pixel()
        +rect()
        +ellipse()
        +line()
        +triangle()
    }
    class Cell {
    }
    class Command {
    }
    class Costume {
    }
    class EnemyData {
    }
    class EventKind {
    }
    class HeroData {
    }
    class HeroProgress {
    }
    class Lesson {
    }
    class Outcome {
        +add()
    }
    class Phase {
    }
    class Pose {
    }
    class SkillData {
    }
    class SkillShape {
    }
    class TimelineFrame {
    }
    class Unit {
    }
    class VisualUnit {
    }
    class Animation {
        +Animation()
        +fromAtlas()
        +update()
        +restart()
        +frame()
        +finished()
    }
    class AssetLoader {
        +~AssetLoader()
        +readFile()
    }
    class Color {
        +Color()
        +white()
        +black()
        +rgb8()
        +withAlpha()
    }
    class Engine {
        +Engine()
        +~Engine()
        +operator=()
        +setHaptics()
        +setDataPath()
        +initGraphics()
    }
    class Font {
        +load()
        +draw()
        +measure()
        +isLoaded()
        +glyph()
    }
    class Glyph {
    }
    class Haptics {
        +~Haptics()
        +vibrate()
        +light()
        +medium()
        +heavy()
    }
    class Strength {
    }
    class Image {
        +isValid()
        +load()
    }
    class Mixer {
        +play()
        +render()
        +setMasterGain()
    }
    class Voice {
    }
    class NullHaptics {
        +vibrate()
    }
    class Particles {
        +Particles()
        +emit()
        +update()
        +render()
        +clear()
        +count()
    }
    class Burst {
    }
    class Particle {
    }
    class Rect {
        +Rect()
        +fromCenter()
        +left()
        +right()
        +top()
        +bottom()
    }
    class Scene {
        +~Scene()
        +onEnter()
        +onExit()
        +update()
        +render()
        +onTouch()
    }
    class Shader {
        +Shader()
        +~Shader()
        +operator=()
        +build()
        +use()
        +uniform()
    }
    class Sound {
        +empty()
    }
    class Sprite {
        +isValid()
        +size()
    }
    class SpriteBatch {
        +SpriteBatch()
        +~SpriteBatch()
        +operator=()
        +init()
        +begin()
        +end()
    }
    class Vertex {
    }
    class TextAlign {
    }
    class Texture {
        +Texture()
        +~Texture()
        +operator=()
        +create()
        +upload()
        +bind()
    }
    class TextureAtlas {
        +TextureAtlas()
        +add()
        +get()
        +has()
        +texture()
    }
    class Timer {
        +Timer()
        +tick()
        +reset()
        +elapsed()
    }
    class TouchEvent {
    }
    class Phase {
    }
    class Vec2 {
        +Vec2()
        +operator+()
        +operator-()
        +operator*()
        +operator/()
        +operator+=()
    }
    class AndroidAssetLoader {
        +AndroidAssetLoader()
        +readFile()
    }
    class AndroidAudio {
        +AndroidAudio()
        +~AndroidAudio()
        +start()
        +stop()
        +onData()
        +onError()
    }
    class AndroidHaptics {
        +AndroidHaptics()
        +~AndroidHaptics()
        +vibrate()
        +resolve()
    }
    class GlContext {
        +GlContext()
        +~GlContext()
        +operator=()
        +createSurface()
        +destroySurface()
        +shutdown()
    }
    Haptics <|-- NullHaptics
    Scene <|-- BattleScene
    AssetLoader <|-- AndroidAssetLoader
    Haptics <|-- AndroidHaptics
    TouchEvent --> Phase
    TouchEvent --> Vec2
    Mixer --> Voice
    Voice --> Sound
    Sprite --> Texture
    SpriteBatch --> Shader
    SpriteBatch --> Texture
    SpriteBatch --> Sprite
    SpriteBatch --> Vertex
    TextureAtlas --> Texture
    TextureAtlas --> Sprite
    Engine --> AssetLoader
    Engine --> SpriteBatch
    Engine --> TextureAtlas
    Engine --> Scene
    Engine --> Timer
    Engine --> Mixer
    Engine --> NullHaptics
    Engine --> Haptics
    Engine --> Texture
    Engine --> Rect
    Animation --> Sprite
    Font --> Sprite
    Font --> Glyph
    Particles --> Particle
    Burst --> Color
    Burst --> Sprite
    Particle --> Vec2
    Particle --> Color
    Particle --> Sprite
    Sfx --> Sound
    SkillData --> SkillShape
    Lesson --> Cell
    Unit --> Cell
    BattleState --> Phase
    BattleState --> HeroProgress
    BattleState --> Unit
    Command --> Cell
    Command --> Action
    BattleEvent --> EventKind
    BattleEvent --> Cell
    Outcome --> BattleEvent
    BattleModel --> BattleState
    BattleArt --> Texture
    VisualUnit --> Vec2
    TimelineFrame --> VisualUnit
    BattleScene --> Engine
    BattleScene --> Font
    BattleScene --> Sfx
    BattleScene --> BattleModel
    BattleScene --> BattleArt
    BattleScene --> Unit
    BattleScene --> Command
    BattleScene --> TimelineFrame
    BattleScene --> Cell
    BattleScene --> Action
    BattleScene --> Outcome
    BattleScene --> Hit
    Hit --> Rect
    Hit --> Button
    DrawUnit --> Vec2
    Canvas --> Image
    AndroidAssetLoader --> AAssetManager
    AndroidAudio --> Mixer
    AppState --> AndroidAssetLoader
    AppState --> Engine
    AppState --> AndroidHaptics
    AppState --> AndroidAudio
    AppState --> GlContext
